--- a/init.target.rc
+++ b/init.target.rc
@@ -363,7 +363,7 @@ service vendor.imsdatadaemon /system/vendor/bin/imsdatadaemon
 service vendor.imsrcsservice /system/vendor/bin/imsrcsd
     class main
     user system
-    group radio diag inet log
+    group radio diag inet log wakelock
 
 on property:vendor.ims.QMI_DAEMON_STATUS=1
     start vendor.imsdatadaemon
