trinket: change ipa trigger level to early-boot.
On fs/post-fs trigger there are chances of vendor partition mounting,
which may block ipa loading. To prevent the same change the
trigger level.

Change-Id: Ia4faa6769199d8099edcb9114fe71a9fbd16bfb0

--- a/init.target.rc
+++ b/init.target.rc
@@ -58,6 +58,8 @@ on fs
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
+
+on early-boot
     write /dev/ipa 1
 
 on late-fs
