ginkgo: Launch bootanimation early
Also includes:

commit 4360a7263af1dd2886f4cd43b5c910a02f108fde
Author: Midas Chien <midaschieh@google.com>
Date:   Fri Apr 10 21:12:56 2020 +0800

    sunfish: rev graphics.composer to 2.4

    Move sunfish to composer 2.4 interface for the R api additions.

commit 82dcb788c9c2ee5d50e75e050550cc841262d3df
Author: Kuba Wojciechowski <nullbytepl@gmail.com>
Date:   Mon Jun 15 21:01:20 2020 +0200

    ginkgo: rootdir: Move boot animation early start to late-init

     * "on init" is triggered in offline charge mode too causing
       boot animation to launch in that mode.

     * Ref: https://github.com/aosp-mirror/platform_system_core/blob/150687b/init/init.cpp#L854-L866

Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/init.target.rc
+++ b/init.target.rc
@@ -42,6 +42,14 @@ on init
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
+on late-init
+    # Start services for bootanim
+    start surfaceflinger
+    start bootanim
+    start vendor.hwcomposer-2-4
+    start vendor.configstore-hal
+    start vendor.qti.hardware.display.allocator
+
 on early-fs
     start vold
 
