ginkgo: Adjust dex2oat thread count after setup wizard
Test: Forrest appinstall test
Bug: 149395059
Change-Id: I9c5db865c616480b0f00629aba54e02b97bc4674
[ghostrider-reborn] Adapted for trinket - 4 little cores, 2 big cores
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/init.target.rc
+++ b/init.target.rc
@@ -388,3 +388,7 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 
 on property:vendor.dcvs.prop=1
    start dcvs-sh
+
+on property:persist.sys.device_provisioned=1
+    setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,6,7
+    setprop dalvik.vm.dex2oat-threads 6
