trinket: Support ufs and emmc variant fstab files
Two fstabs are needed to support different data unit
number (dun) size for ufs and emmc hardwares. This
needs different encryption flag in fstab to address
the difference in dun size.

Change-Id: I53ba3b094c06722b038676f76f3ebd5bdeada8bf

--- a/init.target.rc
+++ b/init.target.rc
@@ -47,7 +47,7 @@ on early-fs
     start vold
 
 on fs
-    mount_all /vendor/etc/fstab.qcom --early
+    mount_all --early
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
     restorecon_recursive /mnt/vendor/persist
@@ -63,7 +63,7 @@ on early-boot
 on late-fs
     wait_for_prop hwservicemanager.ready true
     exec_start wait_for_keymaster
-    mount_all /vendor/etc/fstab.qcom --late
+    mount_all --late
 
 service sec_nvm /vendor/bin/sec_nvm
     class core
