ginkgo: Enable NFC HAL service only on willow
* spams logcat on ginkgo which doesn't have nfc

--- a/init.target.rc
+++ b/init.target.rc
@@ -393,6 +393,24 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 on property:vendor.dcvs.prop=1
    start dcvs-sh
 
+service nqnfcinfo /vendor/bin/nqnfcinfo
+    class late_start
+    group nfc
+    user system
+    oneshot
+    disabled
+
+service nqnfc_2_0_hal_service /vendor/bin/hw/vendor.nxp.hardware.nfc@2.0-service
+    class hal
+    user nfc
+    group nfc
+    override
+    disabled
+
+on property:ro.product.device=willow
+    enable nqnfcinfo
+    enable nqnfc_2_0_hal_service
+
 on property:persist.sys.device_provisioned=1
     setprop dalvik.vm.dex2oat-cpu-set 0,1,2,3,6,7
     setprop dalvik.vm.dex2oat-threads 6
