ginkgo: Set schedtune boost to 50 during bootup
 * now that we've killed sched_boost completely, we'll need schedtune boost
   to make up for the slight increase in bootup time

 * post_boot script will restore stune boost to 1 after bootup

--- a/init.target.rc
+++ b/init.target.rc
@@ -28,7 +28,7 @@
 #
 
 on early-init
-    write /proc/sys/kernel/sched_boost 1
+    write /dev/stune/top-app/schedtune.boost 50
 
 on init
     write /dev/stune/foreground/schedtune.sched_boost_no_override 1
