ginkgo: Fixup 41490b781ccc38ef7143c4afe44bda1ddf815e45 ("Set schedtune boost to 50 during bootup")
 * enable stune boost and prefer_idle globally as there's no top-app during bootup
 * reset back after boot completed

--- a/init.target.rc
+++ b/init.target.rc
@@ -28,7 +28,8 @@
 #
 
 on early-init
-    write /dev/stune/top-app/schedtune.boost 50
+    write /dev/stune/schedtune.boost 50
+    write /dev/stune/schedtune.prefer_idle 1
 
 on init
     write /dev/stune/foreground/schedtune.sched_boost_no_override 1
@@ -432,3 +433,7 @@ on property:persist.sys.device_provisioned=1
 
 on property:vendor.camera.cpuperf.en=*
     write /dev/stune/foreground/schedtune.prefer_idle ${vendor.camera.cpuperf.en}
+
+on property:sys.boot_completed=1
+    write /dev/stune/schedtune.prefer_idle 0
+    write /dev/stune/schedtune.boost 0
